--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -4,20 +4,20 @@ name: Test Action
 
 on:
   workflow_dispatch:
-    inputs:
-      upstream-repo:
-        description: 'The upstream repository to fork from. Format: owner/repo'
-        required: true
-        default: 'rohitnb/demo-public-001'
-      private-mirror-name:
-        description: 'The name for the private mirror'
-        required: true
-        default: 'demo-private-001'
+
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
 
 jobs:
   test-action:
     name: Test Action
     runs-on: ubuntu-latest
+
+    env:
+      UPSTREAM_REPO: rohitnb/demo-public-001
+      PRIVATE_MIRROR_NAME: demo-private-001
 
     steps:
       - name: Checkout
@@ -39,8 +39,8 @@ jobs:
         id: run-action
         uses: ./
         with:
-          upstream-repo: ${{ github.event.inputs.upstream-repo }}
-          private-mirror-name: ${{ github.event.inputs.private-mirror-name }}
+          upstream-repo: ${{ env.UPSTREAM_REPO }}
+          private-mirror-name: ${{ env.PRIVATE_MIRROR_NAME }}
           actor: ${{ github.actor }}
           admin-token: ${{ secrets.ADMIN_TOKEN }}
           organization: ${{ github.organization }}
